# TC_Tummies_21

./: .gitmodules  Farmlink_v18.js  I2C_CO2Sensor.h  README.md  myServer.c  open62541_server.h
New Tech_21/: CMakeLists.txt  myServer
New Tech_21/include/: CO2Sensor.h  I2CSensor.h
New Tech_21/src/: CO2Sensor.cpp  main.cpp
include/: CO2Sensor.h  open62541_server.h
src/: CMakeLists.txt  open62541_server.cpp
